--- a/css/style.css
+++ b/css/style.css
@@ -30,9 +30,9 @@ body {
 h2 {
     
     width: 50%;
-    margin: 30px 0 100px 25%;
+    margin: 30px 0 60px 25%;
     padding-bottom: 20px;
-    border-bottom: 1px solid #e07519;
+    border-bottom: 2px solid #e07519;
     text-align: center;
     
     
@@ -72,7 +72,7 @@ h1 {
 
 
 
-nav .row {padding-top: 50px; }
+nav .row {padding-top: 45px; }
 
 
 .main-nav {
@@ -123,10 +123,7 @@ nav .row {padding-top: 50px; }
     border: none;
 }
 
-.btn-search img {
-    
-    transform: scale(0.65);
-}
+.btn-search img {transform: scale(0.65); }
 
 .main-search {
     
@@ -137,6 +134,7 @@ nav .row {padding-top: 50px; }
 
 
 /* -------- Image Section -------- */
+
 
 .recent-pics {
     
@@ -150,5 +148,37 @@ nav .row {padding-top: 50px; }
 
 .recent-pics li {
     float: left;
-    padding: 52.5px;
+    margin: 0 65px;
+    width: 250px;
+}
+
+.recent-pics li img {
+    width: 250px;
+    height: auto;
+}
+
+
+
+/* -------- Image Title -------- */
+
+
+.recent-pics li p {
+    
+
+}
+
+.img-title {
+    
+    font-weight: 400;
+    margin: 2.5px 0 25px 0; 
+    width: 100%;
+    overflow: hidden;
+}
+
+.img-desc {
+    
+    color: #6e6e6e;
+    overflow: hidden;
+    font-size: 75%;
+    max-width: 100%;
 }
