--- a/css/queries.css
+++ b/css/queries.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 1140px) {
+@media only screen and (max-width: 1140px) and (min-width: 768px) {
     
     .row {
         
@@ -22,10 +22,26 @@
 
     }
     
+    .main-nav li a {
+        
+        font-size: 105%;
+    }
+    
+    .hamburger-menu {
+        
+        display: none;
+    }
+    
     
 }
 
-@media only screen and (max-width: 768px) and (min-width: 480px) {
+@media only screen and (max-width: 768px) {
+    
+    .row {
+        
+        width: 100%;
+        
+    }
     
     .main-nav li a {
         
@@ -35,7 +51,51 @@
     h1 {
         
         font-size: 150%;
+        margin-left: 5%;
+
+    }
+    
+    /* Nav bar on smaller screens  */
+    
+    
+    .header nav .row {
         
+        padding: 10px 0;
+        background: rgba(0, 0, 0, 0.75);
+    }
+    
+    .main-nav li {
+        display: none;
+        
+    }
+
+    .hamburger-menu {
+        
+        display: inline-block;
+        width: 35px;
+        margin-right: 30px;
+        height: auto;
+        float: right;
+        transition: transform 0.2s;
+        margin-top: 5px;
+        cursor: pointer;    
+    }
+    
+    .hamburger-menu:hover {
+        
+        transform: scale(1.15); 
+        
+    }
+    
+    .img-box {
+        
+        width: 60%;
+        margin-left: 20%;
+        margin-right: 20%;
+    }
+    
+    .img-box img {
+        margin-left: 20%;
         
     }
     
@@ -43,6 +103,8 @@
 }
 
 @media only screen and (max-width: 480px) {
+    
+    
     
     
 }
