--- a/css/queries.css
+++ b/css/queries.css
@@ -42,7 +42,7 @@
         width: 100%;
         
     }
-    
+     
     .main-nav li a {
         
         font-size: 80%;
@@ -52,40 +52,35 @@
         
         font-size: 150%;
         margin-left: 5%;
+        padding-top: 0;
 
     }
     
     /* Nav bar on smaller screens  */
     
     
-    .header nav .row {
+    nav .row {
         
-        padding: 10px 0;
+        position: fixed;
+        z-index: 1;
+        padding-top: 15px;
         background: rgba(0, 0, 0, 0.75);
     }
     
-    .main-nav li {
-        display: none;
-        
-    }
+    .main-nav li {display: none; }
 
     .hamburger-menu {
         
         display: inline-block;
-        width: 35px;
+        width: 40px;
         margin-right: 30px;
         height: auto;
         float: right;
-        transition: transform 0.2s;
-        margin-top: 5px;
+        transition: transform 0.3s;
         cursor: pointer;    
     }
     
-    .hamburger-menu:hover {
-        
-        transform: scale(1.15); 
-        
-    }
+    .hamburger-menu:hover {transform: scale(1.15); }
     
     .img-box {
         
@@ -95,19 +90,42 @@
     }
     
     .img-box img {
-        margin-left: 20%;
+        width: 80%;
+        margin-left: 10%; 
+    }
+    
+    .main-search {
+        
+        position: absolute;
+        bottom: 22.5%;
+        margin-left: -31px;
         
     }
+    
+    .mobile-nav {
+        
+        
+        background-color: #393939;
+        margin-top: 10px;
+    }
+    
+    .mobile-nav a {
+
+        display: block;
+        color: #fff;
+        padding: 15px 10px;
+    
+    }
+
+    .mobile-nav a:hover {
+
+        background-color: #535353;
+    }
+
     
     
 }
 
-@media only screen and (max-width: 480px) {
-    
-    
-    
-    
-}
 
 
 
