--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,10 @@ body {
     height: 100%;
 }
 
+a {
 
+    text-decoration: none;
+}
 
 /* -------- Headers -------- */
 
@@ -92,7 +95,6 @@ nav .row {padding-top: 45px; }
 .main-nav li a {
     
     font-size: 110%;
-    text-decoration: none;
     color: #fff;
 }
 
@@ -121,6 +123,7 @@ nav .row {padding-top: 45px; }
     width: 62px;
     margin-left: -5px;
     border: none;
+    cursor: pointer;
 }
 
 .btn-search img {transform: scale(0.65); }
@@ -129,6 +132,7 @@ nav .row {padding-top: 45px; }
     
     margin-top: 50vh;
     height: 62px;
+    
 }
 
 
@@ -187,8 +191,12 @@ nav .row {padding-top: 45px; }
 }
 
 
-/* -------- Image Title -------- */
 
-.mobile-nav {display: none; }
+.mobile-nav {
 
-.mobile-transition {display: none; }
+    display: none;
+    
+
+}
+
+
