Changes to styling on register page

--- a/css/queries-reg.css
+++ b/css/queries-reg.css
@@ -12,8 +12,14 @@
     .main-nav {display: none; }
     .hamburger-menu {display: inline-block;}
 
+
+}
+
+@media only screen and (max-width: 640px) {
     
     
-    
+    .input-box p {
+        float: none;
+    }
     
 }
