Added handlebars rendering, converted website from IIS to express, added API endpoint for register (insert SQL)

--- a/node/views/index.handlebars
+++ b/node/views/index.handlebars
@@ -5,14 +5,14 @@
     <title>Hardware Exchange</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link href="css/style.css" rel="stylesheet" type="text/css">
-    <link href="css/queries.css" rel="stylesheet" type="text/css">
+    <link href="../css/style.css" rel="stylesheet" type="text/css">
+    <link href="../css/queries.css" rel="stylesheet" type="text/css">
     
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="../js/script.js"></script>
     
 </head>
 
@@ -26,15 +26,15 @@
                 
                 <h1>hardware <span class="orange">exchange</span></h1>
                 <ul class="main-nav">
-                    <li><a href="#">Sign up</a></li>
-                    <li><a href="/register.html">Register</a></li>
+                    <li><a href="#">Log in</a></li>
+                    <li><a href="/register">Register</a></li>
                 </ul>   
                 
                 <div class="hamburger-menu"><img src="img/icons/menu.svg"></div> 
                 
                 <div class="mobile-nav">
                     <a href="#">Log in</a>
-                    <a href="/register.html">Register</a>
+                    <a href="/register">Register</a>
                 </div>
                 
             </div>
