--- a/node/views/register.handlebars
+++ b/node/views/register.handlebars
@@ -50,7 +50,7 @@
         
         <div class="center-box">
             <div><h2>Register</h2></div>
-            <form method="post" action="http://localhost:8081/register">
+            <form method="post" action="/register">
                 
                 <div class="input-box">
                     <p>Username:</p>                   
