--- a/node/views/index.handlebars
+++ b/node/views/index.handlebars
@@ -18,25 +18,19 @@
 
 <body>
 
-    <header class="header">
+    <header class="header">      
         
         <nav>
             
             <div class="row">
                 
-                <h1>hardware <span class="orange">exchange</span></h1>
+                <div id="page-header-text"><a href="/">hardware <span class="orange">exchange</span></a></div>
                 <ul class="main-nav">
-                    <li><a href="#">Log in</a></li>
+                    <li><a href="/login">Log in</a></li>
                     <li><a href="/register">Register</a></li>
+                    <li><div class="hamburger-menu"></div></li>
                 </ul>   
-                
-                <div class="hamburger-menu"><img src="img/icons/menu.svg"></div> 
-                
-                <div class="mobile-nav">
-                    <a href="#">Log in</a>
-                    <a href="/register">Register</a>
-                </div>
-                
+ 
             </div>
 
         </nav>
