--- a/node/public/css/style.css
+++ b/node/public/css/style.css
@@ -53,14 +53,16 @@ h2 {
 
 /* -------- Logo -------- */
 
+#page-header-text {display: inline-block; }
 
-h1 {
-    display: inline-block;
+#page-header-text a {
     font-family: 'Varela Round', sans-serif;
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
     font-size: 200%;
+    font-weight: 600;
     color: #fff;
 }
+
 
 .orange {color: #e07519; }
 
@@ -77,13 +79,17 @@ nav .row {padding-top: 45px; }
     
     list-style: none;
     float: right;
-    margin-top: 12px;
+    transform: translate(0, 50%);  
 }
 
 .main-nav li {
     
-    float: left;
-    margin: 0 50px;
+    float: right;
+    margin: 0 40px;
+}
+
+.main-nav li:last-of-type {
+    margin-right: 0;
 }
 
 .main-nav li a {
@@ -113,7 +119,7 @@ nav .row {padding-top: 45px; }
 .btn-search {
     
     background-color: #e07519;
-    height: 100%;
+    height: auto;
     width: 62px;
     margin-left: -5px;
     border: none;
@@ -146,8 +152,6 @@ nav .row {padding-top: 45px; }
 
 
 /* -------- Image Title -------- */
-
-
 
 
 .img-title {
@@ -205,3 +209,9 @@ nav .row {padding-top: 45px; }
 
     background-color: #535353;
 }
+
+
+/* -------- Classes for processing in JS -------- */
+
+
+.hidden {display: none; }
