--- a/node/views/register.handlebars
+++ b/node/views/register.handlebars
@@ -27,8 +27,8 @@
                 <h1>hardware <span class="orange">exchange</span></h1>
                 
                 <ul class="main-nav">
-                    <li><a href="#">Log in</a></li>
-                    <li><a href="#">Register</a></li>
+                    <li><a href="/login">Log in</a></li>
+                    <li><a href="/register">Register</a></li>
                 </ul>   
                 
                 <div class="hamburger-menu"><img src="img/icons/menu.svg"></div> 
@@ -37,8 +37,8 @@
             
 
             <div class="mobile-nav">
-                <a href="#">Log in</a>
-                <a href="#">Register</a>
+                <a href="/login">Log in</a>
+                <a href="/register">Register</a>
             </div>
             
         </nav>
