--- a/node/views/register.handlebars
+++ b/node/views/register.handlebars
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link href="css/register.css" rel="stylesheet" type="text/css">
-    <link href="css/queries-reg.css" rel="stylesheet" type="text/css">
+    <link href="css/queries.css" rel="stylesheet" type="text/css">
     
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -21,26 +21,18 @@
     <header>
         
         <nav>
-
+            
             <div class="row">
                 
-                <h1>hardware <span class="orange">exchange</span></h1>
-                
+                <div id="page-header-text"><a href="/">hardware <span class="orange">exchange</span></a></div>
                 <ul class="main-nav">
                     <li><a href="/login">Log in</a></li>
                     <li><a href="/register">Register</a></li>
+                    <li><div class="hamburger-menu"></div></li>
                 </ul>   
-                
-                <div class="hamburger-menu"><img src="img/icons/menu.svg"></div> 
  
-            </div>  
-            
-
-            <div class="mobile-nav">
-                <a href="/login">Log in</a>
-                <a href="/register">Register</a>
             </div>
-            
+
         </nav>
         
     </header>
