--- a/node/views/register.handlebars
+++ b/node/views/register.handlebars
@@ -90,10 +90,10 @@
         switch (msg) {
 
             case 'bad-email':
-                $('#msg').text('Please input a valid email address.');
+                $('#msg').text('<p class="msg-text">Please input a valid email address.</p>');
                 break;
             case 'dupe-email':
-                $('#msg').html('That email already exists - did you mean to <a href="/login">log in</a>?');
+                $('#msg').html('<p class="msg-text">That email already exists - did you mean to <span><a href="/login" class="msg-link">log in?</a></span></p>');
                 break;
         }
 
