Added account page and verification with cookie - work in progress

--- a/node/views/account.handlebars
+++ b/node/views/account.handlebars
@@ -5,7 +5,7 @@
     <title>Hardware Exchange</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link href="../css/style.css" rel="stylesheet" type="text/css">
+    <link href="../css/account.css" rel="stylesheet" type="text/css">
     <link href="../css/queries.css" rel="stylesheet" type="text/css">
     
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
@@ -18,7 +18,38 @@
 
 <body>
 
-    <h1>Welcome <span id="email"></span></h1>
+    <header>
+        
+        <nav>
+            
+            <div class="row">
+                
+                <div id="page-header-text"><a href="/">hardware <span class="orange">exchange</span></a></div>
+                <ul class="main-nav">
+                    <li><a href="/login">Sign out</a></li>
+                    <li><a href="/register">fgdf</a></li>
+                    <li><div class="hamburger-menu"></div></li>
+                </ul>   
+ 
+            </div>
+
+        </nav>
+        
+    </header>
+
+    <section id="account-details">
+        <div class="row">
+            <div class="header-box">
+                <div class="icon-box"><img src="img/placeholders/download.jpeg"></div>
+                <h1>account name</h1>
+            </div>
+        </div>
+
+
+
+    </section>
+
+
 
 
 
